--- a/Presentation/wwwroot/css/site.css
+++ b/Presentation/wwwroot/css/site.css
@@ -8,15 +8,16 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+html, body {
+    height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+.full-height {
+    height: 100%;
 }
