Complate all view page (html pages prepare before)

--- a/Presentation/Views/Shared/Components/CreateTodo/Default.cshtml
+++ b/Presentation/Views/Shared/Components/CreateTodo/Default.cshtml
@@ -1,1 +1,27 @@
-﻿
+﻿<form class="row mb-3 border rounded p-3">
+
+    <div class="col-4">
+        <div class="input-group">
+            <label for="Description" class="input-group-text">Description</label>
+            <input type="text" id="Description" class="form-control">
+        </div>
+    </div>
+
+    <div class="col-3">
+        <div class="input-group">
+            <label for="start-date" class="input-group-text">Start Date</label>
+            <input type="date" id="start-date" class="form-control">
+        </div>
+    </div>
+
+    <div class="col-3">
+        <div class="input-group">
+            <label for="end-date" class="input-group-text">End Date</label>
+            <input type="date" id="end-date" class="form-control">
+        </div>
+    </div>
+
+    <div class="col-2">
+        <input type="submit" value="Create Todo" id="create-todo" class="form-control btn btn-primary">
+    </div>
+</form>
