--- a/Presentation/Views/Shared/Components/FilterTodo/Default.cshtml
+++ b/Presentation/Views/Shared/Components/FilterTodo/Default.cshtml
@@ -1,1 +1,9 @@
-﻿
+﻿<div class="row justify-content-md-center gap-5 my-3 border rounded p-3">
+
+    <a class="col-3 btn btn-success">Show Only Complated Todos</a>
+
+    <a class="col-3 btn btn-danger">Show Only Uncomplated Todos</a>
+
+    <a class="col-3 btn btn-primary">Show All Todos</a>
+
+</div>
